# hbs2

examples/chat/: README.md  chat.cabal
examples/chat/src/: Config.hs  DB.hs  Env.hs  Error.hs  Main.hs  Message.hs  Monad.hs  Types.hs  Workers.hs
examples/chat/src/Components/: Head.hs  Icons.hs  LogoutButton.hs  ThemeToggleButton.hs
examples/chat/src/Pages/: Login.hs  Main.hs
examples/chat/src/Util/: Attributes.hs  Text.hs  UserNameColor.hs
examples/chat/src/Utils/: Attributes.hs
examples/chat/src/Workers/: RefChan.hs  Web.hs
examples/chat/static/css/: styles.css  username-colors.css
examples/chat/static/js/: autoresize.js  scripts.js  theme-toggle.js
